--- a/EKS/private-private/eksctl/custom-dns/no-spot/config-1.16.yaml
+++ b/EKS/private-private/eksctl/custom-dns/no-spot/config-1.16.yaml
@@ -45,6 +45,10 @@ nodeGroups:
     labels: {
       partition: regular-agents
     }
+    tags: {
+      cb-name: foobar:cb
+      cb-chocolate: pretzel:dark
+    }
     iam:
       withAddonPolicies:
         autoScaler: true
