--- a/EKS/private-private/scripts/cloudbees-config-efs.yml
+++ b/EKS/private-private/scripts/cloudbees-config-efs.yml
@@ -12,3 +12,5 @@ OperationsCenter:
     cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
 Persistence:
   StorageClass: "aws-efs"
+Master:
+  JavaOpts: "-Dcom.cloudbees.masterprovisioning.kubernetes.KubernetesMasterProvisioning.storageClassName=aws-efs -Dcb.BeekeeperProp.noFullUpgrade=true"
