fixed syntax on tollerations

--- a/EKS/private-private/scripts/cloudbees-config-efs-proxycompatibility.yaml
+++ b/EKS/private-private/scripts/cloudbees-config-efs-proxycompatibility.yaml
@@ -14,8 +14,7 @@ OperationsCenter:
     partition: masters
   ServiceType: ClusterIP
   Tolerations: 
-    - 
-      effect: NoSchedule
+    - effect: NoSchedule
       key: partition
       operator: Equal
       value: masters
